# libch341a

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml
examples/: ch341a_gpio_common.c  ch341a_gpioget.c  ch341a_gpioinfo.c  ch341a_gpioset.c  ch341a_i2cdetect.c  ch341a_i2cget.c  ch341a_spipipe.c  common.h  gpioget.c  gpioinfo.c  i2cdetect.c  i2cset.c  meson.build  probech341a.c  spiepaper.c  tux.h
include/: libch341a.h  meson.build
src/: ch341a.c  ch341a.h  ch341a_gpio.c  ch341a_gpio.h  ch341a_i2c.c  ch341a_i2c.h  ch341a_spi.c  ch341a_spi.h  ch347_jtag.h  ch347_spi.c  meson.build
subprojects/: .gitignore  libdgpc.wrap  libebogroll.wrap  libusrio.wrap
